# serverless_knowledge_assistant

./: .gitignore  Makefile  README.md  build_lambda.sh  pyproject.toml
lambda/: bedrock_client.py  handler.py  schemas.py
terraform/: api_gateway.tf  bedrock.tf  iam.tf  lambda.tf  outputs.tf  providers.tf  s3.tf  ui.tf  variables.tf
tests/lambda/: conftest.py  test_bedrock_client.py  test_handler.py  test_schemas.py
tests/terraform/: __init__.py  conftest.py  test_api_gateway.py  test_bedrock.py  test_lambda.py  test_s3.py  utils.py
ui/: index.html  styles.css
