[project]
name = "serverless-knowledge-assistant"
version = "0.1.0"
description = "Serverless RAG application built on AWS with Amazon Bedrock Knowledge Base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/lambda", "tests/terraform"]
pythonpath = ["lambda"]
addopts = [
    "-v",
    "--cov=lambda",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["lambda"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
